app/assets/stylesheets/layout.css.scss
/* ... */
.welcome-message {
  background: #ddd;
  border-radius: 3px;
  padding: 15px;
  text-align: center;
}
.profile-sidebar {
  padding-left: 0 !important;
  padding-right: 0 !important;
  ul {
    margin: 0;
    list-style-type: none;
    li {
      border-bottom: 1px solid #ddd;
      padding-bottom: 10px;
      margin-bottom: 10px;
      &:last-child {
        border-bottom: none;
        padding-bottom: 0;
        margin-bottom: 0;
      }
      iframe {
        margin-top: 10px;
      }
    }
  }
  .rounded-panel {
    padding: 0;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-bottom: 15px;
  }
}

.status-panel {
  padding: 0;
  overflow: hidden;
  margin-bottom: 15px;
  .status-form {
    border: none;
    box-shadow: none;
    margin-bottom: 0;
    padding: 15px;
    height: 70px;
  }
  .status-fb-share {
    background: none;
    float: right;
    font-size: 12px;
    margin-right: 0px;
    position: relative;
    top: 9px;
  }
  .btn {
    float: right;
    border-radius: 3px;
    padding: 6px 40px;
    margin-bottom: 0;
    background: #17A68A;
    &:hover {
      background: darken(#17a68a, 10);
    }
  }
}
.panel-footer {
  padding: 10px;
  background: #F5F5F5;
  border-top: 1px solid #DDDDDD;
}

.update-panel {
  padding: 0;
  padding-top: 15px;
  overflow: hidden;
  margin-bottom: 15px;
  .user-image {
    display: inline-block;
    float: left;
    img {    
      width: 40px;
      border-radius: 3px;
    }
  }
  .user-info {
    float: left;
    margin-left: 20px;
    .story-title {
      color: #999999;
      font-weight: 300;
      margin: 0;
      font-size: 16px;
      a {
        color: #333;
        font-weight: 700;
      }
      span {
        font-size: 16px;
      }
    }
    .secondary {
      color: #999;
      font-size: 14px;
      margin-bottom: 10px;
      margin-left: 0;
    }
  }
  .panel-footer {
    padding: 0;
    .footer-button {
      border-right: 1px solid #ddd;
      display: inline-block;
      padding: 10px 0px;
      margin-right: -5px;
      float: left;
      a {
        padding: 10px 15px;
        color: #ACACAC;
        &:hover {
          color: $orange;
        }
      }
    }
    .who-liked {
      float: right;
      margin-bottom: 0;
      position: relative; 
      top: 4px;
      li {
        margin-right: 10px;
        float: left;
      }
      .liked {
        img {
          width: 25px;
          border-radius: 3px;
          opacity: .7;
          transition: .2s ease-in;
          &:hover {
            opacity: 1;
          }
        }
      }
      .more-liked {
        background: #D8D8D8;
        border-radius: 3px;
        font-size: 12px;
        color: #5D5D5D;
        height: 25px;
        opacity: .7;
        padding: 3px 10px;
        position: relative;
        top: 1px;
      }
    }
  }
  .comment-section {
    background: #F5F5F5; 
    border-top: 1px solid #ddd;
    padding: 0;
    .panel-input {
      padding: 10px;
      input {
        border: 1px solid #ddd;
        margin-bottom: 0;
        box-shadow: none;
        width: 100%;
        padding: 10px;
        border-radius: 3px;
        font-size: 12px;
      }
    }
    .comment {
      border-top: 1px solid #ddd;
      padding: 10px;
      position: relative;
      .time-stamp {
        display: block;
        font-size: 13px;
        color: #999;
        position: relative;
        top: -5px;
        margin-bottom: -10px;
      }
      .user-info {
        margin-left: 0;
        .story-title {
          margin-right: 10px;
          display: inline-block;
          float: left;
          line-height: 29px;
          margin-bottom: 0;
        }
        .secondary {
          color: #535353;
          font-size: 16px;
          margin-top: -7px;
          margin-bottom: 0;
          display: inline-block;
          float: left;
          margin-left: 0px;
          line-height: 30px;
        }
      }
    }
  }
}

.listing-embed {
  margin-bottom: 15px;
  .list-panel {
    padding-bottom: 0;
    border: 1px solid #F0F0F0;
    box-shadow: none;
    height: 180px;
    .main-image {
      margin-bottom: 0;
    }
    h2 {
      margin-bottom: 30px;
    }
    h5 {
      text-overflow: ellipsis;
      overflow: hidden;
      white-space: nowrap;
    }
  }
  .small-block-grid-2 {
    margin-bottom: -15px;
  }
  .follow-panel {
    @extend .clearfix;
    padding-bottom: 0;
    border: 1px solid #F0F0F0;
    box-shadow: none;
    .listing-aside {
      padding: 10px;
    }
    img {
      width: 50px;
      border-radius: 3px;
      float: left;
    }
    h5 {
      line-height: 40px;
      margin-left: 15px;
      display: inline-block;
    }
  }
}

.feedback {
  .rounded-panel {
    padding: 0;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

.user-trust {
  .icon {
    margin-right: 10px;
    &.ion-android-checkmark {
      color: #1bbc9b;
    }
    &.ion-android-close {
      color: #b2bcbb;
    } 
  }
  h6 {
    font-weight: bold;
  }
  ul {
    margin-left: 15px;
    li {
      border-bottom: none;
      padding-bottom: 0;
      margin-bottom: 0;
    }
  }
}

.ion-android-star {
  margin-right: 0 !important;
  font-size: 13px;
  position: relative;
  top: -2px;
  color: #b3bdbc;
  &.active {
    color: #f4b603;
  }
}

.star-rating-input {
  .star-wrapper {
    unicode-bidi: bidi-override;
    direction: rtl;
    display: inline-block;
    .ion-android-star {
      font-size: 25px;
      padding-top: 10px;
      margin-bottom: 15px;
      transition: .2s ease-in;
      cursor: pointer;
      color: #b3bdbc; 
    }
    > .ion-android-star:hover:before,
    > .ion-android-star:hover ~ .ion-android-star:before {
      color: #f4b603;
      transition: .2s ease-in;
    }
  }
}

.experience-form {
  margin-top: 20px;
  textarea {
    border-radius: 3px;
    box-shadow: none;
    margin-top: 5px;
    height: 100px;
  }
  .button {
    float: right;
    margin-bottom: 0;
  }
}
/* ... */

